@@ -1,3 +1,9 @@
+2007-06-04  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/method.py:  Fix harddrive install method error
+	checking (#242492, patch from Andrew Edmunds
+	<andrew DOT edmunds AT yahoo.com.au>).
+
 2007-05-18  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/user.py (FC6_UserData.__str__):  Fix typo in
